# tanuphone

./: Readme.md  memo.md
.github/workflows/: rust.yml
demo/: .gitignore  Cargo.toml
demo/src/: main.rs  main_window.rs  message.rs  pjsua_wrapper.rs
pjsua/: build.rs
pjsua/src/: lib.rs
tanuphone/: .gitignore  Cargo.toml
tanuphone/src/: main.rs  main_window.rs  message.rs  pjsua_wrapper.rs  setting.rs
tanuphone/src/main_window/: mod.rs  phone_mode_view.rs  setting_mode_view.rs
tanuphone/src/usecases/: account_add.rs  callto.rs  destroy.rs  hangup.rs  mod.rs
