[package]
name = "tanuphone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pjsua = { path = "../pjsua" }
eframe = { version ="0.33.3" }
once_cell = { version = "1.21.3" }
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1"}
